[package]
name = "sidemount"
version = "0.0.1"
authors = ["Thomas Holloway <nyxtom@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Sidemount is a streamlined http/web toolkit designed for building async network apps in Rust"
homepage = "https://github.com/sidemount-rs/sidemount"
repository = "https://github.com/sidemount-rs/sidemount"
keywords = ["web", "tcp", "http", "udp", "networking"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
hyper = { version = "0.14.20", features = ["http1", "server"] }
tokio = { version = "1.20.1", features = ["tokio-macros", "rt-multi-thread", "net", "macros"] }

[[example]]
name = "hello"
path = "examples/hello.rs"
